<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addTaskLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#233442"
    tools:context=".taskmaster.activities.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="72dp"
        android:text="@string/add_task"
        android:textColor="#8E5DE6"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

    <Button
        android:id="@+id/AddTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#F6F5F2"
        android:shadowColor="#F8F6F6"
        android:text="@string/add_task_button"
        android:textAllCaps="false"
        android:textColor="#8E5DE6"
        app:iconTint="#FDFCFC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="144dp"
        android:text="@string/task_title"
        android:textColor="#8E5DE6"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/AddTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTaskTitle"
        android:layout_width="368dp"
        android:layout_height="72dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="182dp"
        android:autofillHints=""
        android:contentDescription="@string/labelfor_my_task"
        android:ems="10"
        android:hint="@string/mytask"
        android:inputType="textPersonName"
        android:textColor="#8E5DE6"
        app:layout_constraintBottom_toTopOf="@+id/AddTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription,EditableContentDescCheck" />

    <EditText
        android:id="@+id/editTextTaskBody"
        android:layout_width="371dp"
        android:layout_height="72dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="224dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/taskdescription"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/AddTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskTitle"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="207dp"
        android:text="@string/task_description"
        android:textColor="#8E5DE6"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTaskBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskTitle"
        app:layout_constraintVertical_bias="0.173" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="60dp"
        android:text="@string/total_tasks_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskButton" />

    <TextView
        android:id="@+id/textViewAddTaskActivitySubmitted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="261dp"
        android:text="@string/submitted"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskButton" />

    <Spinner
        android:id="@+id/TaskStateSpinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskBody"
        android:textColor="#EDEAEA"/>

</androidx.constraintlayout.widget.ConstraintLayout>