<resources>
    <string name="app_name">TaskMaster</string>
    <string name="task_title">Task Title</string>
    <string name="add_task">Add Task</string>
    <string name="add_task_button">ADD TASK</string>
    <string name="my_task">My Task</string>
    <string name="task_description">Task Description</string>
    <string name="do_something">Do Something</string>
    <string name="labelfor_my_task">labelFor: My Task</string>
    <string name="labelfor_my_tasks">labelFor: My Tasks</string>
    <string name="total_tasks_0">Total Tasks: 0</string>
    <string name="my_tasks_button">My Tasks</string>
    <string name="all_tasks_button">All Tasks</string>
    <string name="my_tasks">My Tasks</string>
    <string name="image_on_main">Image on Main</string>
    <string name="all_tasks">All Tasks</string>
    <string name="submitted">Submitted!</string>
    <string name="mytask">My Task</string>
    <string name="taskdescription">Task Description</string>
    <string name="task_detail">Task Detail</string>
    <string name="clickable_settings_icon">Clickable Settings Icon</string>
    <string name="enter_username">Enter Username</string>
    <string name="username">Username</string>
    <string name="save">SAVE</string>
    <string name="task_details">Task Details</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="task_1">Task 1</string>
    <string name="task_2">Task 2</string>
    <string name="task_3">Task 3</string>
    <string name="welcome">Welcome:</string>
    <string name="editable_username">Editable Username</string>
    <string name="usernameEdit">Username</string>
    <string name="usernameEditable">username</string>
    <string name="no_input">No Input</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tasks">tasks</string>
    <string name="textview">TextView</string>
    <string name="state">state</string>
    <string name="body">body</string>
    <string name="todo">TODO</string>

</resources>