<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#233442"
    tools:context=".taskmaster.activities.MainActivity">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="248dp"
        android:text="@string/my_tasks"
        android:textColor="#A01ED6"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/addTaskIntentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#F4F2F4"
        android:text="@string/add_task_button"
        android:textColor="#8E5DE6"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/allTasksIntentButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="NotSibling" />

    <Button
        android:id="@+id/allTasksIntentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="242dp"
        android:layout_marginTop="451dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#F6F3F3"
        android:text="@string/all_tasks_button"
        android:textColor="#8E5DE6"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/addTaskIntentButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityMainSettingsButton"
        app:layout_constraintVertical_bias="0.881" />

    <ImageView
        android:id="@+id/activityMainSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="624dp"
        android:background="#A01ED6"
        android:contentDescription="@string/clickable_settings_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627"
        app:srcCompat="@android:drawable/ic_menu_preferences"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@android:drawable/ic_menu_manage" />

    <TextView
        android:id="@+id/activityMainUsernameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="116dp"
        android:contentDescription="@string/editable_username"
        android:hint="@string/usernameEdit"
        android:text="@string/username"
        android:textAllCaps="false"
        android:textColor="#E09DEC"
        android:textColorHint="#131010"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/activityMainRecycleViewTasks"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="21dp"
        android:shadowColor="#4493C8"
        android:text="@string/welcome"
        android:textColor="#A01ED6"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/activityMainUsernameDisplay"
        tools:ignore="TextContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activityMainRecycleViewTasks"
        android:layout_width="366dp"
        android:layout_height="310dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:background="#233442"
        android:contextClickable="true"
        android:textColor="#F1EEEE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="303dp"
        android:layout_height="204dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="26dp"
        android:background="#19306A"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/addTaskIntentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityMainRecycleViewTasks"
        tools:src="@color/purple_200"
        tools:srcCompat="@drawable/dexter" />
</androidx.constraintlayout.widget.ConstraintLayout>